<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskManager</string>
    <string name="showprocinfo">Show System Process</string>
    
    <string name="tab_title_process">进程</string>
    
    <string name="please_select">请选择</string>
    <string name="info_detail">查看详情</string>
    <string name="kill_process">强制结束</string>
    <string name="kill_all">全部结束</string>
    
    <string name="unknown">未知</string>
    <string name="no_use">暂无</string>
    
    <string name="refresh">刷新</string>
    <string name="setting">设置</string>
    <string name="quit">退出</string>
    
    <string name="detail_process_name">进程名称</string>
    <string name="detail_process_copyright">版权信息</string>
    <string name="detail_process_install_dir">安装目录</string>
    <string name="detail_process_data_dir">数据目录</string>
    <string name="detail_process_package_size">文件大小</string>
    <string name="detail_process_permission">操作权限</string>
    <string name="detail_process_activity">活动信息</string>
    <string name="detail_process_service">服务信息</string>
    
    <string name="detail_process_company">公司:</string>
    <string name="detail_process_version">版本:</string>
    
    <string name="basic_info_cpu">CPU:</string>
    <string name="basic_info_mem">MEM:</string>
    
    <string name="progress_tips_title">提示</string>
    <string name="progress_tips_content">正在刷新列表，请稍候...</string>
    <string name="my_package">com.guo.taskmanager</string>
</resources>
